Updated imdb library for better throttling Thanks to MediaCenterJS Decoupled Scanner from ExtendedInfo Providers. Scanner provide Just Enough Data ExtendedInfo are optional and now use an event emitter to update medias, so now I can create new providers Media that are scanned are persisted right away instead of waiting on extended info providers Fixed async issues while scanning (duplicated index uid)

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "awilix-koa": "^1.0.2",
     "axios": "^0.17.1",
     "bristol": "^0.3.3",
+    "camel-case": "^3.0.0",
     "epinfer": "^1.1.4",
     "fejl": "^1.0.2",
     "keyblade": "^0.3.2",
@@ -36,7 +37,9 @@
     "lokijs": "^1.5.1",
     "memoized-decorator": "0.0.2",
     "mongo-querystring": "^4.1.1",
+    "moviedb": "^0.2.10",
     "moviedb-api": "0.0.3",
+    "p-throttle": "^1.1.0",
     "palin": "^2.2.0",
     "recursive-readdir": "^2.2.1",
     "shorthash": "0.0.2",
