--- a/config.json.dist
+++ b/config.json.dist
@@ -1,4 +1,3 @@
 {
-  "moviedb_api_key": "",
-  "data_folder":  false /* defaults to  ~/.media_speed */
+  "moviedb_api_key": "PUT_YOUR_API_KEY_HERE"
 }
