Big hls improvements Experimental dash streamet (no seeking and probably never)

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fejl": "^1.0.2",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^5.0.0",
+    "hh-mm-ss": "^1.2.0",
     "image-downloader": "^3.3.0",
     "keyblade": "^0.3.2",
     "koa": "^2.3.0",
@@ -38,9 +39,11 @@
     "koa-compress": "^2.0.0",
     "koa-respond": "^1.0.1",
     "koa-router": "^7.3.0",
+    "koa2-static": "^1.0.1",
     "lodash": "^4.17.4",
     "lokijs": "^1.5.1",
     "memoized-decorator": "0.0.2",
+    "milliseconds-to-iso-8601-duration": "^0.1.0",
     "mongo-querystring": "^4.1.1",
     "moviedb": "^0.2.10",
     "moviedb-api": "0.0.3",
