--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "koa-compress": "^2.0.0",
     "koa-respond": "^1.0.1",
     "koa-router": "^7.3.0",
-    "koa2-static": "^1.0.1",
+    "koa-static-server": "^1.3.2",
     "lodash": "^4.17.4",
     "lokijs": "^1.5.1",
     "memoized-decorator": "0.0.2",
