--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "printWidth": 120
   },
   "lint-staged": {
-    "*.js": [
+    "src/**/*.js": [
       "eslint --fix",
       "prettier --write",
       "git add"
