--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "lodash": "^4.17.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
+    "redux": "^3.7.2",
+    "redux-form": "^7.2.1",
+    "redux-logger": "^3.0.6",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.77.2"
   },
