--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "redux": "^3.7.2",
     "redux-form": "^7.2.1",
     "redux-logger": "^3.0.6",
+    "reselect": "^3.0.1",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.77.2"
   },
