--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "scripts": {
     "start": "node dist/bin/www.js",
-    "build": "rimraf dist && cross-env NODE_ENV=production babel src -d dist -s",
+    "build-server": "rimraf dist && cross-env NODE_ENV=production babel src -d dist -s",
+    "build-frontend": "cd frontend && rimraf build && yarn build",
+    "build": "yarn build-server && yarn build-frontend",
     "dev-frontend": "cd frontend && yarn start",
     "dev-backend": "nodemon src/bin/www.js",
     "dev": "concurrently --kill-others-on-fail \"yarn dev-backend\" \"yarn dev-frontend\"",
