--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "scripts": {
     "start": "node dist/bin/www.js",
-    "build-server": "rimraf dist && cross-env NODE_ENV=production babel src -d dist -s",
-    "build-frontend": "cd frontend && rimraf build && yarn build",
+    "build-server": "yarn install && rimraf dist && cross-env NODE_ENV=production babel src -d dist -s",
+    "build-frontend": "cd frontend && rimraf build && yarn install && yarn build",
     "build": "yarn build-server && yarn build-frontend",
     "dev-frontend": "cd frontend && yarn start",
     "dev-backend": "nodemon src/bin/www.js",
