You can now update library path You can now scan a library from the ui (superhero) Used a css theme so IO don't loose to much time to put everything in a dark theme Fixed mutable updates in redux store

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^5.0.0",
     "hh-mm-ss": "^1.2.0",
+    "i": "^0.3.6",
     "image-downloader": "^3.3.0",
     "keyblade": "^0.3.2",
     "koa": "^2.3.0",
@@ -52,10 +53,12 @@
     "mongo-querystring": "^4.1.1",
     "moviedb": "^0.2.10",
     "moviedb-api": "0.0.3",
+    "npm": "^5.6.0",
     "p-throttle": "^1.1.0",
     "palin": "^2.2.0",
     "recursive-readdir": "^2.2.1",
     "redux-thunk": "^2.2.0",
+    "reselect-devtools": "^0.0.1",
     "shorthash": "0.0.2",
     "throttled-queue": "^1.0.5",
     "torrent-name-parser": "^0.6.5",
