--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "redux-logger": "^3.0.6",
     "reselect": "^3.0.1",
     "semantic-ui-css": "^2.2.12",
+    "semantic-ui-forest-themes": "^1.0.3",
     "semantic-ui-react": "^0.77.2"
   },
   "scripts": {
