Fix for broken posters Fix broken images in production build Update yarn script to specify production when starting the project (fix broken router in docker)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "homepage": ".",
+  "homepage": "/web/",
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
