--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^5.0.0",
     "hh-mm-ss": "^1.2.0",
+    "hls.js": "^0.8.9",
     "i": "^0.3.6",
     "image-downloader": "^3.3.0",
     "keyblade": "^0.3.2",
@@ -46,6 +47,7 @@
     "koa-respond": "^1.0.1",
     "koa-router": "^7.3.0",
     "koa-static-server": "^1.3.2",
+    "load-script": "^1.0.0",
     "lodash": "^4.17.4",
     "lokijs": "^1.5.1",
     "memoized-decorator": "0.0.2",
@@ -56,6 +58,7 @@
     "npm": "^5.6.0",
     "p-throttle": "^1.1.0",
     "palin": "^2.2.0",
+    "react-video-seek-slider": "^1.2.1",
     "recursive-readdir": "^2.2.1",
     "redux-thunk": "^2.2.0",
     "reselect-devtools": "^0.0.1",
