--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,8 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "lodash": "^4.17.4",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "next",
+    "react-dom": "next",
     "react-lazyload-img": "^1.0.3",
     "react-player": "^1.2.1",
     "react-redux": "^5.0.6",
